--- a/PuzzlePlatforns.uproject
+++ b/PuzzlePlatforns.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "PuzzlePlatforns",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
